--- a/pathway_c.html
+++ b/pathway_c.html
@@ -47,7 +47,10 @@
 { manifestUri: 'http://digi.vatlib.it/iiif/MSS_Vat.gr.1827/manifest.json', location: 'Vat.gr.1827'},
 { manifestUri: 'http://digi.vatlib.it/iiif/MSS_Vat.gr.1882/manifest.json', location: 'Vat.gr.1882'},
 { manifestUri: 'http://digi.vatlib.it/iiif/MSS_Urb.gr.154/manifest.json', location: 'Urb.gr.154'},
-{ manifestUri: 'http://digi.vatlib.it/iiif/bav_pal_lat_24/manifest.json', location: 'Pal.lat.24'}         
+{ manifestUri: 'http://digi.vatlib.it/iiif/bav_pal_lat_24/manifest.json', location: 'Pal.lat.24'},
+{ manifestUri: 'http://digi.vatlib.it/iiif/MSS_Vat.gr.316/manifest.json', location: 'Vat.gr.316'}, 
+{ manifestUri: 'http://digi.vatlib.it/iiif/MSS_Vat.gr.788.pt.A/manifest.json', location: 'Vat.gr.788.pt.A'},
+{ manifestUri: 'http://digi.vatlib.it/iiif/MSS_Vat.lat.5757/manifest.json', location: 'Vat.lat.5757'}
 ],
 "windowObjects": [],
 	  /** Testing Annotations **/
